fix wrap on WeatherApp

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,3 +6,7 @@
 .padding-0 {
     padding: 0 0 0 0 !important;
 }
+
+.brand {
+    font-size: 20,
+}
